client/src/App.scss
// Import Google fonts
//@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@500;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto+Slab&display=swap');


$body-font: "Roboto Mono", "monospace";
$headers-font: "Roboto Slab", "serif";
$logo-font: "IBM Plex Serif", "serif";

$font-family-sans-serif:  $body-font;
$headings-font-family:    $headers-font;
$font-size-base: 1rem;

.box-card {
  overflow: hidden;
  border: none;
  border-radius: 3px;
  max-width: 380px;

  margin: 10px;
  //background: white;
  //box-shadow: 0 0 15px rgba(0,0,0,0.2);
}

.box-card > img {
  height: 200px;
  width: 100%;
  object-fit: cover;
}

.box-card h4 > a {
  margin: 0;
  color: black;
}

.box-card p {
  opacity: .7;
  margin: 0;
}
.banner {
  position: relative;
  height: 30vh;
  background-size: contain;
  background-repeat-y: no-repeat;
  h2 {
    position: absolute;
    top: 35%;
    left: 5%;
    color: white;
    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
    font-weight: bold;

  }
}
.article-show-container {
  margin: 0 auto;
  color: #373331;
  padding: 36px;
  background: rgb(250, 250, 247);
  font-size: 1.2rem;
  margin-bottom: 26px;



}
.content-layout {
      max-width: 800px;
        margin: 0 auto;



}
.article-show-header  {
  margin: .7rem 0;
  text-align: left;
  color: #373331;
  font-weight: 600;
  h1 {
     font-size: 3rem;
     margin: 2rem 0;
  }
  .subtitle {
     font-size: 1.5rem;
  }
  .source {

    padding: 5PX 10px;
    background: red;
    color: white;

  }
}



.content-layout {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  text-align: justify;
}



.content-layout .text {
  margin-top: 1rem;
}
.wide-card  {
  display: block;
  padding: 25px;
  width: 100%;
}
.wide-card .card-infos {
  padding: 4px;
  max-width: 800px;
  margin: 0 auto;

}
.review-credit {
  display: inline-block;
  float: right;
  background: black;
  width: auto;
  color: rgb(250, 250, 247);
  padding: 0px 6px;
}

.review-card {
  max-width: 800px;
margin: 0 auto;
padding: 10px 0px;
height: auto;
}

.reviews-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
 background-color: rgb(254, 255, 251);
 padding: 0 10%;

}

.wide-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
}



select {
  padding: 2px;

}
.select-menu {
  width: auto;
}
select:focus {
  outline:none;
}

.navbar-lewagon {

  justify-content: center;
  background: white;
}

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
  .no-ajax-nav-link {
    padding-right: 0;
    padding-left: 0;
  }

}

.navbar-lewagon .navbar-brand img {
  width: 40px;
}
.navbar {
    //position: fixed;
    width: 100%;
    top: -16px;
    padding-top: 0;
    padding-bottom: 0;
}
.logo {
  padding-top: 0px;
  background: white;

}
.logo a {
  font-size: 42px;
  font-family: $logo-font;
  color: #292b29;
  line-height: 1.6;
  opacity: 1;
  &:hover {
    color: #292b29;
    text-decoration: none;
  }
}

.no-ajax-nav-link {
  color: rgba(0, 0, 0, 0.5);
  display: block;
  padding: 0.5rem 1rem;
}

.external-link {
  color: inherit;
}
.external-link:hover {
  text-decoration: underline;
    color: inherit;


}

.footer {
  background-color: rgb(250, 250, 247);
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  height: 100px;
  padding: 0px 50px;
  color: #373331;
}
.footer-links {
  display: flex;
  align-items: center;
}
.footer-links a {
  color: black;
  opacity: 0.7;
  text-decoration: none;
  font-size: 24px;
  padding: 0px 10px;
}
.footer-links a:hover {
  opacity: 1;
}

a.nav-link {
  color: black;
  opacity: 0.8;
  text-decoration: none;
  padding: 0;
  margin: 0px 6px;
}

a.nav-link:hover {
  opacity: 1;
  transition: all 70ms;
}

a.nav-link[aria-current]{
  opacity: 1;
  background-color: rgb(241, 226, 9);
  color: black;
  transition: all 70ms;
}

.article-list {
  display: flex !important;
  flex-wrap: wrap !important;
  justify-content: space-evenly;
}

.box-card small {
  display: block;
}


.article-show {
  position: absolute;
  background-color: white;
  margin: 50px 20px;
}



.btn-order {
  border: 1px solid black;
  display: block;
  width: 20%;
  margin: 0 auto;
}

.scroll-icon {
   border: 4px black solid;
}

.scroll {
  font-size: 28px;
  display: inline-block;
  width: 50px;
  height: 50px;
  text-align: center;
  border-radius: 50%;

  position: fixed;
  bottom: 30px;
  right: 30px;
  transition:
    opacity .5s, visibility .5s;
  opacity: .5;
  z-index: 1000;

  &:hover {
    opacity: 1;
  }
}

.scroll_To_Top:hover {
  cursor: pointer;
  opacity: 1;
}
.scroll_To_Top:active {
}
.praises {

  background-color: rgb(241, 227, 11);
  padding: 80px 30px;
  display: flex;
  flex-wrap: wrap;
  vertical-align: flex-end;
  justify-content: center;




}
.praise {
    max-width: 500px;
    display: inline-flex;
    flex-wrap: wrap;
    align-items: start;
    justify-content: space-between;
    padding: 0px 25px;
    margin-bottom: 78px;
}

.praise p {
  max-width: 700px;
  font-size: 30px;
  line-height: 1.4;
  font-weight: bold;
  padding-right: 24px;
}
 /* Parallax base styles
  --------------------------------------------- */

  .parallax {
    height: 500px; /* fallback for older browsers */
    height: 100vh;
    overflow-x: hidden;
    overflow-y: auto;
    -webkit-perspective: 300px;
    perspective: 300px;
  }

  .parallax__group {
    position: relative;
    height: 500px; /* fallback for older browsers */
    height: 100vh;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
  }

  .parallax__layer {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }

  .parallax__layer--fore {
    -webkit-transform: translateZ(90px) scale(.7);
    transform: translateZ(90px) scale(.7);
    z-index: 1;
  }

  .parallax__layer--base {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    z-index: 4;
  }

  .parallax__layer--back {
    -webkit-transform: translateZ(-300px) scale(2);
    transform: translateZ(-300px) scale(2);
    z-index: 3;
  }

  .parallax__layer--deep {
    -webkit-transform: translateZ(-600px) scale(3);
    transform: translateZ(-600px) scale(3);
    z-index: 2;
  }


  /* Debugger styles - used to show the effect
  --------------------------------------------- */

  .debug {
    position: fixed;
    top: 0;
    left: .5em;
    z-index: 999;
    background: rgba(0,0,0,.85);
    color: #fff;
    padding: .5em;
    border-radius: 0 0 5px 5px;
  }
  .debug-on .parallax__group {
    -webkit-transform: translate3d(800px, 0, -800px) rotateY(30deg);
    transform: translate3d(700px, 0, -800px) rotateY(30deg);
 }
  .debug-on .parallax__layer {
    box-shadow: 0 0 0 2px #000;
    opacity: 0.9;
  }
  .parallax__group {
    -webkit-transition: -webkit-transform 0.5s;
    transition: transform 0.5s;
  }


  /* demo styles
  --------------------------------------------- */



   /* centre the content in the parallax layers */
 /* .title {
    text-align: center;
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  } */



  /* style the groups
  --------------------------------------------- */

  #group1 {
    z-index: 5; /* slide over group 2 */
  }
  #group1 .parallax__layer--base {
    background: rgb(102,204,102);
  }

  #group2 {
    z-index: 3; /* slide under groups 1 and 3 */
  }
  #group2 .parallax__layer--back {
    background: rgb(123,210,102);
  }

  #group3 {
    z-index: 4; /* slide over group 2 and 4 */

  }
  #group3 .parallax__layer--base {
    background: rgb(153,216,101);
  }

  #group4 {
    z-index: 2; /* slide under group 3 and 5 */
  }
  #group4 .parallax__layer--deep {
    background: rgb(184,223,101);
  }

  #group5 {
    z-index: 3; /* slide over group 4 and 6 */
  }
  #group5 .parallax__layer--base {
    background: rgb(214,229,100);
  }

  #group6 {
    z-index: 2; /* slide under group 5 and 7 */
  }
  #group6 .parallax__layer--back {
    background: rgb(245,235,100);
  }

  #group7 {
    z-index: 3; /* slide over group 7 */
  }
  #group7 .parallax__layer--base {
    background: rgb(255,241,100);
  }


.about-image  {
background: url('https://res.cloudinary.com/litall/image/upload/v1584544494/dovalfon/DovAlfon03a_by_Assaf_Matarasso_mojio8.jpg') no-repeat fixed;

background-position: center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
      background-attachment: fixed;
  display: flex;
  flex-direction: row-reverse;
  height: 500px;
  padding: 20px;

}

.about-text-container {
  display: flex;
  justify-content: flex-end;
  padding: 10px 26px;
  width: 100vw;
}


.about-text {
  //background-color: white;

  padding: 0 20px;
  width: 50vw;
  p {
    color: white;
  }
}


.about-image, .about-text {
  height: auto;
}


.home {
  background-color: rgb(254, 255, 251);
}

.hero {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding: 36px 26px;
  h2 {
  }
}

.hero-left .book-image{
  margin: 0 auto;
  height: 560px;
  width: 376px;
  background-size: cover;
  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);

}
.hero-right {
  //background-color: white;

  width: 100%;
  padding: 0px;
  flex-grow: 2;
  border-radius: 3px;
  .text {
    padding: 0 25px;
     margin: 0 auto;
  }

}
.hero-left {
  flex-grow: 0;
  width: 100%;
}

.hero-left, .hero-right {
  height: auto;
  margin-bottom: 26px;
}
.translations {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
  margin-bottom: 26px;


  .book {
    width: 130px;
    height: 200px;
    margin: 1px;
  }
}


.flip-container {
  cursor: pointer;
  height: 200px;
  perspective: 600;
  position: relative;
  width: 130px;
}
.flip {
  height: 100%;
  position: absolute;
  transform-style: preserve-3d;
  transition: all 1s ease-in-out;
  width: 100%;

}
.flip:hover {
  transform: rotateY(180deg);
}
.flip .side {
  backface-visibility: hidden;
  border-radius: 6px;
  height: 100%;
  position: absolute;
  overflow: hidden;
  width: 100%;
}
.flip .back {
  padding-top: 40%;
  color: #373331;
  background: rgb(250, 250, 247);
  text-align: center;
  transform: rotateY(180deg);
}



// Specific CSS for your home-page

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) {
  .banner {
    height: 50vh;
    h2 {
      font-size: 48px,
    }
  }
  .logo a {
    font-size: 72px;
  }
}

// Medium devices (tablets, 768px and up)
@media (min-width: 992px){

  .banner {
    height: 65vh;
    h2 {
      font-size: 56px,
    }
  }
    .hero-right {
    max-width: 400px;
  }
    .hero-left, .hero-left .book-image {
    max-width: 400px;
  }

}

// Large devices (desktops, 992px and up)
@media (min-width: 1000px) {

  .translations {

    .book {

      margin: 8px;
  }
}


}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {
    .hero-right {
    max-width: 700px;
  }
   .hero-left, .hero-left .book-image {
    max-width: 400px;
  }
}

